--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin",
+  "name": "strapi",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -11,19 +11,20 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.12.7",
-    "@strapi/plugin-users-permissions": "4.12.7",
-    "@strapi/plugin-i18n": "4.12.7",
-    "pg": "8.8.0"
+    "@strapi/plugin-i18n": "4.12.5",
+    "@strapi/plugin-users-permissions": "4.12.5",
+    "@strapi/provider-upload-cloudinary": "4.12.5",
+    "@strapi/strapi": "4.12.5",
+    "pg": "8.11.2"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "b3eb0aa5-792c-40a0-9901-6815b76214f4"
+    "uuid": "35d7a084-3088-4d0b-869e-f503693ee8e5"
   },
   "engines": {
-    "node": ">=16.0.0 <=20.x.x",
+    "node": ">=16.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
