add changes cloudinary

--- a/admin/.env.example
+++ b/admin/.env.example
@@ -1,7 +1,15 @@
-HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
+ADMIN_JWT_SECRET=Vnz80S3TTsdVgQp3O5tvgw==
+API_TOKEN_SALT=x8A/lKZe0NvzaNAkFSXiMw==
+APP_KEYS=aivz1EugTsWKDHSFPDuK+w==,CPeMQjMQzh9dY0boM1r8fw==,0Kkva9FBdvVFtjQBsTfsQA==,6vKNxj/FHeoowOWN8kvc6w==
+CLOUDINARY_KEY=298639838185729
+CLOUDINARY_NAME=dfxwg2qk7
+CLOUDINARY_SECRET=fZUQ06-pjQUzlBPWX5ad5V3Cp28
+
+
+DATABASE_URL=postgresql://postgres:7CMR2S3h0il5OsztQESu@containers-us-west-62.railway.app:6401/railway
+JWT_SECRET=K7PAA2qgxy9naBaRL/crVg==
+PGDATABASE=railway
+PGHOST=containers-us-west-62.railway.app
+PGPASSWORD=7CMR2S3h0il5OsztQESu
+PGPORT=6401
+PGUSER=postgres
