--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,9 @@
     "@strapi/plugin-users-permissions": "4.12.5",
     "@strapi/provider-upload-cloudinary": "4.12.5",
     "@strapi/strapi": "4.12.5",
+    "strapi-plugin-populate-deep": "2.0.0",
+    "strapi-plugin-transformer": "3.0.1",
+    
     "pg": "8.11.2"
   },
   "author": {
