--- a/app/package.json
+++ b/app/package.json
@@ -23,5 +23,8 @@
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
