--- a/admin/.env.example
+++ b/admin/.env.example
@@ -5,28 +5,10 @@ CLOUDINARY_KEY=298639838185729
 CLOUDINARY_NAME=dfxwg2qk7
 CLOUDINARY_SECRET=fZUQ06-pjQUzlBPWX5ad5V3Cp28
 
-
-# DATABASE_URL=postgresql://postgres:7CMR2S3h0il5OsztQESu@containers-us-west-62.railway.app:6401/railway
-# JWT_SECRET=K7PAA2qgxy9naBaRL/crVg==
-# PGDATABASE=railway
-# PGHOST=containers-us-west-62.railway.app
-# PGPASSWORD=7CMR2S3h0il5OsztQESu
-# PGPORT=6401
-# PGUSER=postgres
-
-DATABASE_URL=postgresql://postgres:J0S3P4RD0*@localhost:5432/pardoprueba
 JWT_SECRET=K7PAA2qgxy9naBaRL/crVg==
-PGDATABASE=pardoprueba
-PGHOST=localhost
-PGPASSWORD=J0S3P4RD0*
-PGPORT=5432
-PGUSER=postgres
 
-# DATABASE_URL=postgres://default:yqnh6Gpb7UTJ@ep-tight-frog-82101936-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb
-# JWT_SECRET=K7PAA2qgxy9naBaRL/crVg==
-# PGDATABASE=verceldb
-# PGHOST=ep-tight-frog-82101936-pooler.us-east-1.postgres.vercel-storage.com
-# PGPASSWORD=yqnh6Gpb7UTJ
-# PGPORT=5432
-# PGUSER=default
-
+DATABASE_URL="postgres://default:yqnh6Gpb7UTJ@ep-tight-frog-82101936-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+PGUSER="default"
+PGPORT="ep-tight-frog-82101936-pooler.us-east-1.postgres.vercel-storage.com"
+PGPASSWORD="yqnh6Gpb7UTJ"
+PGDATABASE="verceldb"
